[tool.poetry]
name = "PyQtDarkTheme"
version = "0.1.9"
description = "Flat dark theme for PySide and PyQt."
authors = ["Yunosuke Ohsugi <63651161+5yutan5@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/5yutan5/PyQtDarkTheme"
homepage = "https://github.com/5yutan5/PyQtDarkTheme"
packages = [{ include = "qdarktheme" }]

keywords = ["qt", "stylesheets", "dark-theme"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-return = "^1.1.3"
flake8-print = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^21.11.29"
flake8-simplify = "^0.14.2"
flake8-comprehensions = "^3.7.0"
pyproject-flake8 = "^0.0.1-alpha.2"

pytest = "^6.2.5"
pytest-cov = { version = "^3.0.0", extras = ["toml"] }
pytest-qt = "^4.0.2"
pytest-xvfb = "^2.0.0"

black = "^21.12b0"
isort = "^5.10.1"
bandit = "^1.7.1"
pre-commit = "^2.16.0"
click = "^8.0.3"
pyinstaller = "^4.7"

[tool.poetry.plugins."pyinstaller40"]
hook-dirs = "qdarktheme.__pyinstaller:get_hook_dirs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
max-complexity = 10
docstring-convention = "google"
per-file-ignores = ["**/__init__.py:F401", "**/rc_icons.py:D103"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.coverage.run]
# omit submodule
omit = ["qdarktheme/qtpy/**"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
