[tool.poetry]
name = "PyQtDarkTheme"
version = "1.0.2"
description = "Flat dark theme for PySide and PyQt."
authors = ["Yunosuke Ohsugi <63651161+5yutan5@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/5yutan5/PyQtDarkTheme"
homepage = "https://github.com/5yutan5/PyQtDarkTheme"
documentation = "https://pyqtdarktheme.readthedocs.io"
packages = [{ include = "qdarktheme" }]

keywords = ["qt", "stylesheets", "dark-theme"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pydata-sphinx-theme = { version = "^0.7.2", optional = true }
sphinx-panels = { version = "^0.6.0", optional = true }

[tool.poetry.dev-dependencies]
# flake8
flake8 = "^4.0.1"
flake8-return = "^1.1.3"
flake8-print = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^21.11.29"
flake8-simplify = "^0.14.2"
flake8-comprehensions = "^3.7.0"
flake8-eradicate = "^1.2.0"
flake8-rst-docstrings = "^0.2.5"
flake8-pytest-style = "^1.6.0"
pyproject-flake8 = "^0.0.1-alpha.2"

# pytest
pytest = "^6.2.5"
pytest-cov = { version = "^3.0.0", extras = ["toml"] }
pytest-randomly = "^3.10.3"
pytest-qt = "^4.0.2"
pytest-xvfb = "^2.0.0"
pytest-github-actions-annotate-failures = "^0.1.6"

# sphinx
Sphinx = "^4.3.1"
sphinx-panels = "^0.6.0"
pydata-sphinx-theme = "^0.7.2"
rstcheck = "^3.3.1"

black = "^21.12b0"
isort = "^5.10.1"
pre-commit = "^2.16.0"
pyinstaller = "^4.7"
rich = "^10.16.1"
pep8-naming = "^0.12.1"

[tool.poetry.extras]
# See https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
docs = ["pydata-sphinx-theme", "sphinx-panels"]

[tool.poetry.plugins."pyinstaller40"]
# See https://pyinstaller.readthedocs.io/en/stable/hooks.html#providing-pyinstaller-hooks-with-your-package
hook-dirs = "qdarktheme.__pyinstaller:get_hook_dirs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
max-complexity = 10
docstring-convention = "google"
per-file-ignores = ["**/__init__.py:F401", "**/rc_icons.py:D103"]

# See https://github.com/peterjc/flake8-rst-docstrings#configuration
extend-ignore = ["RST201", "RST203", "RST301"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.coverage.run]
omit = ["qdarktheme/qtpy/**"]

[tool.pytest.ini_options]
markers = [
    "available_qt: marks tests as test to do only when there is qt-binding",
]

[tool.pyright]
typeCheckingMode = "basic"
# Build app with cx_Freeze include pyi file
ignore = ["dist"]
